<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.hiro.pchen.firebasechat.StartActivity">


    <Button
        android:id="@+id/reg_join_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/winered"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white"
        android:text="@string/join_us_here"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/reg_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:text="@string/sign_in_here"
        android:layout_below="@+id/reg_join_us"
        android:layout_alignEnd="@+id/reg_join_us"
        android:layout_alignStart="@+id/reg_join_us" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="82dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/welcome_to_firebase_chat"
        android:textColor="@color/white"
        android:textSize="26sp" />
</RelativeLayout>
