<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hiro.pchen.firebasechat.AccountModel.UserInfoActivity"
    android:background="@color/dark_blue">

    <include layout="@layout/bar_line"
        android:id="@+id/users_info_bar"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_info_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="43dp"
        android:src="@drawable/default_avatar"
        android:layout_below="@+id/users_info_bar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/user_info_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/display_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/user_info_img"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/user_info_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:text="@string/hello_nice_to_see_you"
        android:textSize="25sp"
        android:layout_below="@+id/user_info_username"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/request_friend_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white"
        android:background="@color/winered"
        android:text="@string/request_as_friend"
        android:layout_marginBottom="67dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/user_info_img"
        android:layout_alignEnd="@+id/user_info_img" />


</RelativeLayout>
